--- a/serverless.yml
+++ b/serverless.yml
@@ -8,7 +8,8 @@ plugins:
 
 custom:
   stage: "${env:SLS_STAGE, 'dev'}"
-  hostedZoneName: "dev.serverlessops.io"
+
+  hostedZoneName: "dev.training.serverlessops.io"
   bucketName: "${self:service}-${self:custom.stage}.${self:custom.hostedZoneName}"
   # Additional region zone IDs and DNS names found here:
   # https://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region
