--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,12 @@ custom:
   region: "${opt:region, 'us-east-2'}"
   log_level: "${env:LOG_LEVEL, 'INFO'}"
 
-  hostedZoneName: "${ssm:/route53/root/ServerlessOpsDomain}"
+  # XXX: If you're reading this and wondering what is going on, this works
+  # around an issues where the SSM lookup fails because the provider has not
+  # yet been resolved. That env lookup somehow causes this to work.
+  ssm_path: "${env:_SLS_FIXME, 'route53/root/ServerlessOpsDomain'}"
+  hostedZoneName: "${ssm:/${self:custom.ssm_path}}"
+
   bucketName: "${self:service}-${self:custom.stage}.${self:custom.hostedZoneName}"
   # Additional region zone IDs and DNS names found here:
   # https://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region
