--- a/serverless.yml
+++ b/serverless.yml
@@ -11,9 +11,13 @@ custom:
   region: "${opt:region, 'us-east-2'}"
   log_level: "${env:LOG_LEVEL, 'INFO'}"
 
+  ssm_encryption_key_arn: "${ssm:/infra/kms/prime/alias/serverlessops/master/Arn}"
+
   thundraApiKey: "${ssm:/thundra/root/api-key}"
 
   request_unicorn_url: "${cf:wild-rydes-ride-fleet-${self:custom.stage}.RequestUnicornUrl}"
+  request_unicorn_api_key_ssm_param: "/wild-rydes-ride-fleet/${self:custom.stage}/api_key"
+
   ride_record_url: "${ssm:/wild-rydes-ride-record/${self:custom.stage}/URL}"
 
   hostedZoneName: "${ssm:/route53/root/ServerlessOpsDomain}"
@@ -61,6 +65,21 @@ provider:
         - "sns:Publish"
       Resource:
         - Ref: RidesSnsTopic
+    - Effect: "Allow"
+      Action:
+        - "ssm:GetParameter"
+      Resource:
+        - Fn::Join:
+          - ":"
+          - - "arn:aws:ssm"
+            - Ref: AWS::Region
+            - Ref: AWS::AccountId
+            - "parameter${self:custom.request_unicorn_api_key_ssm_param}"
+    - Effect: "Allow"
+      Action:
+        - "kms:Decrypt"
+      Resource:
+        - "${self:custom.ssm_encryption_key_arn}"
 
 
 functions:
@@ -72,6 +91,7 @@ functions:
     environment:
       LOG_LEVEL: "${self:custom.log_level}"
       REQUEST_UNICORN_URL: "${self:custom.request_unicorn_url}"
+      REQUEST_UNICORN_API_KEY_SSM_PARAM: "${self:custom.request_unicorn_api_key_ssm_param}"
       RIDES_SNS_TOPIC_ARN:
         Ref: RidesSnsTopic
     events:
