--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@ custom:
   region: "${opt:region, 'us-east-2'}"
   log_level: "${env:LOG_LEVEL, 'INFO'}"
 
-  request_unicorn_url: "${cf:wild-rydes-ride-fleet-${self:custom.stage}.RequestUnicornUrl}"
+  request_unicorn_arn: "${ssm:/wild-rydes-ride-fleet/${self:custom.stage}/RequestUnicornInvokeArn}"
   ride_record_url: "${ssm:/wild-rydes-ride-record/${self:custom.stage}/URL}"
 
   hostedZoneName: "${ssm:/route53/root/ServerlessOpsDomain}"
@@ -58,6 +58,10 @@ provider:
         - "sns:Publish"
       Resource:
         - Ref: RidesSnsTopic
+    - Effect: "Allow"
+      Action:
+        - "lambda:InvokeFunction"
+      Resource: "${self:custom.request_unicorn_arn}"
 
 
 functions:
@@ -68,7 +72,7 @@ functions:
     timeout: 29
     environment:
       LOG_LEVEL: "${self:custom.log_level}"
-      REQUEST_UNICORN_URL: "${self:custom.request_unicorn_url}"
+      REQUEST_UNICORN_ARN: "${self:custom.request_unicorn_arn}"
       RIDES_SNS_TOPIC_ARN:
         Ref: RidesSnsTopic
     events:
